2008-01-12  muppetman

	* xs/GdkRegion.xs
	* t/GdkRegion.t:  Return copy of stack rectangle instead of just
	a pointer, to avoid garbage values from get_clipbox().  Patch from
	Kevin Ryde.

2008-01-11  muppetman

	* xs/GtkCellLayout.xs:  Fix usage message bug reported by Kevin Ryde.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Unstable release 1.172.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkVisual.t
	* t/GdkX11.t
	* t/GtkPaned.t: Fix some reported test failures by either being
	less conservative in what we expect or by simply testing less of
	gtk+ itself.

2008-01-09  muppetman

	* MANIFEST
	* t/GtkBuildableIface.t
	* xs/GtkBuildable.xs:  Allow perl code to implement GtkBuildableIface.

	Lots of documentation.  Hide docs for the normal GtkBuildable
	methods, as they are really only useful for GtkBuilder to call.
	Add a new unit test for the iface stuff.

	This change requires the deferral of class instantiation in
	Glib::Type::register_object() if you are going to implement the
	interface on a class derived from a class that already implements
	that interface (e.g., if you want to implement Buildable on a
	Widget).

	* t/GdkCairo.t:  Improve skip message on GdkCairo.t; don't claim
	Cairo is missing when the problem is actually an empty DISPLAY.

2008-01-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/PangoLayout.xs: Work around what appears to be a bug in
	ExtUtils::ParseXS' xsubpp (used by default in perl 5.10.0) for the
	pango_layout_line_x_to_index xsub: manually handle output
	arguments, i.e. dont't rely on OUTLIST.  This should fix the
	"Modification of a read-only value attempted" issue.

	* Gtk2.pm
	* Makefile.PL: Require Cairo if gtk+ >= 2.8 or pango >= 1.10.
	Previously, we just checked for gtk+ >= 2.8.  A new pango usually
	implies a new gtk+, but that's not necessarily the case.  So check
	both independently and require Cairo if either is new enough.

2008-01-07  muppetman
